[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "postbin"
version = "0.2.0"
authors = [{name = "Martin Thoma", email = "info@martin-thoma.de"}]
maintainers = [{name = "Martin Thoma", email = "info@martin-thoma.de"}]
description = "A simple Flask webserver to log all incoming requests with their headers and payloads"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["flask", "rich"]

[project.scripts]
postbin = "postbin:main"

[project.urls]
Source = "https://github.com/MartinThoma/postbin"

[tool.flit.sdist]
exclude = [".github/*", ".pre-commit-config.yaml", ".gitignore", "Makefile"]
